# scene_manager_msgs

./: CMakeLists.txt  package.xml
msg/: Layout.msg
srv/: ModifyObject.srv  ModifyObjects.srv  MoveTo.srv
